<resources>
    <string name="app_name">Generic Login Screen</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="user_profile_picture_placeholder">User profile picture placeholder</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
</resources>
